syntax = "proto3";
package proto;
option go_package = "./nodemessaging/proto";

import "google/protobuf/empty.proto";

message CallerInfo{
    string address = 1;
}

message EventMessage {
    byte source = 1;
    byte destination = 2
    // TODO, change to real types
    bytes payload = 3;
}

message CommandMessage {
    byte source = 1;
    byte destination = 2
    bytes payload = 1;
}

service MessageCenter {
    // The clients call this method to build a event channel from server to client.
    rpc subscribeEvents(CallerInfo) returns (stream EventMessage);
    // The clients call this method to build a command channel from client to server.
    rpc sendCommands(stream CommandMessage) returns (google.protobuf.Empty);
}